일기 확인 API HTTP 코드 수정
