# swagger-output.json
@@ -1062,12 +1062,12 @@
               }
             }
           },
-          "400": {
-            "description": "Bad Request (오늘 작성한 일기가 존재하지 않음)",
+          "201": {
+            "description": "OK (오늘 작성한 일기가 존재하지 않음)",
             "schema": {
               "example": {
-                "isSuccess": false,
-                "code": 400,
+                "isSuccess": true,
+                "code": 201,
                 "message": "No diary is written today. continue to write diary."
               }
             }
